--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,7 @@ before_install:
 
 script:
 - if [ -n "${C_COMPILER}" ]; then export CC="${C_COMPILER}"; fi
+- cat /proc/cpuinfo || true
 - cmake .. -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" ${SIMDE_CMAKE_ARGS}
 - make VERBOSE=1
 - if [ "${C_COMPILER}" = "arm-linux-gnueabihf-gcc" ]; then
