travis: change name of "clang-9 asan,ubsan" to "clang-9"

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
     arch: amd64
     compiler: clang
 
-  - name: "clang-9 asan,ubsan"
+  - name: "clang-9"
     compiler: clang-9
     env:
     - C_COMPILER=clang-9
