travis: temporarily allow failures until Travis fixes a bug
The icc and clang-9 builds seem to trigger a bug in Travis.  See
https://travis-ci.community/t/odd-error-in-one-repo-works-in-another/6859/3
The commit works in other repos, but not this one.  Hopefully they
are able to fix the issue soon and we can hove these back out of the
allowed failures.

--- a/.travis.yml
+++ b/.travis.yml
@@ -124,6 +124,9 @@ jobs:
   allow_failures:
   - name: xlc
   - name: s390x
+  # https://travis-ci.community/t/odd-error-in-one-repo-works-in-another/6859/3
+  - name: clang-9
+  - name: icc
 
 before_install:
 - cat /proc/cpuinfo || true
