Require GCC-style vector extension for shuffle and convert builtins.
XL C/C++ apparently supports __builtin_shufflevector (it returns true
when checked with __has_builtin), but does not support GCC-style vector
extensions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,7 @@ jobs:
     - sudo apt-get install "xlc.${XLC_VERSION}" "xlc-license-community.${XLC_VERSION}"
     - sudo /opt/ibm/xlC/${XLC_VERSION}/bin/xlc_configure <<< 1 >/dev/null
     env:
+    - ARCH_FLAGS=-qarch=auto
     - C_COMPILER=xlc
     - CXX_COMPILER=xlc++
 
