Use native types for arguments and return values
This is a *massive* patch, I'm sorry about that.  Unfortunately the
change requires a huge amount of code inside of SIMDe to also
change.  The public API doesn't change.

The idea is that instead of passing around our union, we should pass
a native vector if available (i.e., an __m128 on SSE, float32x4_t
for NEON, etc.), otherwise hopefully a GCC-style vector.  This provides
several major advantages:

 * Compilers are less likely generate extra moves and instead keep
   everything in vectors.  This isn't actually that big of a deal
   because compilers optimize out virtually all of this, but I have
   seen it miss a few.
 * Some compilers (MSVC 2017, I'm looking at you) don't allow you to
   pass around unions with increased alignment requirements, but seem
   to have hardcoded support for the vector types they know about.

Additionally, since we now have to convert to/from our union in the
function implementations, I was able to make the conversion functions
use memcpy and now we don't have type punning through unions!  Almost
every compiler was okay with the punning since we had the may_alias
attribute on all the members, but MSVC doesn't support may_alias.  In
the past I haven't actually had a problem with that since MSVC tends
to be extremely conservative about optimizations that break punned
code, but it was having problems with SIMDe.

That gets several compilers and platforms working and all tests
passing.  The only platform I've tried that now doesn't work is s390x,
and that's likely all endianness issues.  I'll have to look into it,
but IIRC Intel makes a lot of endianness assumptions in the API.

This is also a huge improvement for the native aliases.  Since we're
now using the native types instead of the SIMDe unions, you're able
to mix SIMDe and native implementations.  It also makes implementation
of aliases much simpler since we don't have to convert to/from the
SIMDe union in the alias macros, so bugs s

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
   - BUILD_TYPE="Coverage"
   - ARCH_FLAGS="-march=native"
   - BUILD_CPP_TESTS=ON
+  - CMAKE_GENERATOR='Unix Makefiles'
+  - RUN_TESTS=true
 
 jobs:
   include:
@@ -43,13 +45,13 @@ jobs:
         packages:
         - clang-9
 
-  - name: "gcc-8 i686"
+  - name: "gcc-8 x86"
     arch: amd64
     compiler: gcc-8
     env:
     - C_COMPILER=gcc-8
     - CXX_COMPILER=g++-8
-    - ARCH_FLAGS="-march=i686"
+    - ARCH_FLAGS="-m32"
     addons:
       apt:
         packages:
@@ -101,16 +103,27 @@ jobs:
     - C_COMPILER=xlc
     - CXX_COMPILER=xlc++
 
-  - name: s390x
-    arch: s390x
-
   - name: osx
     os: osx
 
-  - name: windows
+  - name: msvc x86
     os: windows
     env:
     - ARCH_FLAGS=""
+    - CMAKE_GENERATOR="Visual Studio 15 2017"
+
+  - name: msvc x86_64
+    os: windows
+    env:
+    - ARCH_FLAGS=""
+    - CMAKE_GENERATOR="Visual Studio 15 2017 Win64"
+
+  - name: msvc arm
+    os: windows
+    env:
+    - ARCH_FLAGS=""
+    - CMAKE_GENERATOR="Visual Studio 15 2017 ARM"
+    - RUN_TESTS=false
 
   - name: "gcc-7 amd64"
     compiler: gcc
@@ -168,9 +181,8 @@ jobs:
       emsdk/emsdk activate latest
       source emsdk/emsdk_env.sh
 
-  allow_failures:
-  - name: s390x
-  - name: windows
+  # - name: s390x
+  #   arch: s390x
 
 before_install:
 - cat /proc/cpuinfo || true
@@ -194,6 +206,7 @@ script:
 - mkdir "${TRAVIS_BUILD_DIR}/test/build" && cd "${TRAVIS_BUILD_DIR}/test/build"
 - |
   ${CONFIGURE_WRAPPER} cmake .. \
+    -G "${CMAKE_GENERATOR}" \
     -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" \
     -DCMAKE_C_FLAGS="${ARCH_FLAGS} ${COMPILER_FLAGS} ${CFLAGS}" \
     -DCMAKE_CXX_FLAGS="${ARCH_FLAGS} ${COMPILER_FLAGS} ${CXXFLAGS}" \
@@ -202,10 +215,12 @@ script:
     ${CMAKE_ARGS}
 - ${BUILD_WRAPPER} cmake --build .
 - |
-  if [ "windows" != "${TRAVIS_OS_NAME}" ]; then
-    ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION}
-  else
-    ctest --output-on-failure --interactive-debug-mode 0 -C Debug -V
+  if [ "${RUN_TESTS}" = "true" ]; then
+    if [ "windows" != "${TRAVIS_OS_NAME}" ]; then
+      ${TEST_WRAPPER} ./run-tests${EXECUTABLE_EXTENSION}
+    else
+      ctest --output-on-failure --interactive-debug-mode 0 -C Debug -V
+    fi
   fi
 
 after_success:
