--- a/.travis.yml
+++ b/.travis.yml
@@ -31,19 +31,19 @@ jobs:
         - gcc-9
         - g++-9
 
-  - name: "clang-9"
-    compiler: clang-9
+  - name: "clang-10"
+    compiler: clang-10
     env:
-    - C_COMPILER=clang-9
-    - CXX_COMPILER=clang++-9
+    - C_COMPILER=clang-10
+    - CXX_COMPILER=clang++-10
     - COMPILER_FLAGS='-fsanitize=address,undefined'
     addons:
       apt:
         sources:
-        - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main'
+        - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main'
           key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
         packages:
-        - clang-9
+        - clang-10
 
   - name: "gcc-8 x86"
     arch: amd64
