--- a/.travis.yml
+++ b/.travis.yml
@@ -149,7 +149,7 @@ jobs:
     env:
     - C_COMPILER=icc
     - CXX_COMPILER=icpc
-    - OPTIMIZATION_FLAGS="/Ox"
+    - COMPILER_FLAGS='-wd13200 -wd13203'
     - BUILD_CPP_TESTS=OFF
     install:
     - source /opt/intel/inteloneapi/compiler/latest/env/vars.sh
